# dabctl

./: .gitignore  .gitmodules  AGENTS.md  CODE_QUALITY_IMPROVEMENTS.md  COMPREHENSIVE_TEST_REPORT.md  CROSS_COMPILE.md  Cargo.toml  DABSTAR_REPLACEMENT_TRACKER.md  DABstar_FUNCTIONS.md  DABstar_FUNCTIONS_FOR_DABCTL.md  DEPLOYMENT_CHECKLIST.md  ETI.md  LICENSE  OUTPUT_FORMAT.md  README.md  REFACTORING.md  TEST_RESULTS.md  build.rs  dabctl.1  dabctl.sh  eti-rtlsdr-rust.1  eti-rtlsdr-rust.sh  live-capture-iq2pcm.sh  live-capture.sh  test-capture.sh  test-e2e.sh
.devcontainer/: devcontainer.json
.github/agents/: default.agent.md  expert-dabctl-rust.md
.github/instructions/: defaullt.instructions.md  dsp.instructions.md  rf.instructions.md
.github/workflows/: release.yml
src/: app.rs  callbacks.rs  channel.rs  cli.rs  dab_constants.rs  dab_frame.rs  dab_processor.rs  errors.rs  eti2pcm_cmd.rs  eti_pipeline.rs  iq2eti.rs  iq2pcm_cmd.rs  lib.rs  logging.rs  main.rs  metadata.rs  pcm.rs  pcm_writer.rs  rtlsdr_sys.rs  scan_cmd.rs  types.rs
src/audio/: audio_runtime.rs  ebu_latin.rs  fic_decoder.rs  mod.rs  mot_decoder.rs  mot_manager.rs  pad_decoder.rs  pad_output.rs  rs_decoder.rs  silence_filler.rs  superframe.rs
src/audio/aac_decoder/: faad2.rs  fdkaac.rs  mod.rs
src/backend/: deconvolver.rs  galois.rs  mod.rs  msc_handler.rs  reed_solomon.rs
src/backend/audio/: faad_decoder.rs  fdk_aac.rs  mod.rs  mp4processor.rs
src/backend/data/: mod.rs  mot.rs  pad_handler.rs
src/decoder/: fib_decoder.rs  fic_decoder.rs  mod.rs  viterbi.rs
src/device/: ffi.rs  mod.rs  rtlsdr_handler.rs  rtlsdr_handler_osmocom.rs  rtlsdr_handler_rs.rs
src/eti2pcm/: aac_decoder.rs  crc.rs  ebu_latin.rs  eti_frame.rs  eti_reader.rs  fic_decoder.rs  mod.rs  mot_decoder.rs  mot_manager.rs  mp2_decoder.rs  pad_decoder.rs  pad_output.rs  rs_decoder.rs  superframe.rs
src/eti_handling/: cif_interleaver.rs  eti_generator.rs  eti_handler.rs  eti_serializer.rs  fib_processor.rs  fic_handler.rs  mod.rs  prot_tables.rs  protection.rs  viterbi_handler.rs
src/iq/: mod.rs  rawfile_handler.rs  rtlsdr_handler.rs  rtlsdr_port.rs
src/ofdm/: freq_interleaver.rs  mod.rs  mod_new2.rs  ofdm_decoder.rs  ofdm_handler.rs  ofdm_processor.rs  phase_reference.rs  phase_table.rs  sample_reader.rs  sync_processor.rs  time_syncer.rs
src/pipeline/: band_handler.rs  cif_interleaver.rs  dab_frame.rs  dab_pipeline.rs  eti_generator.rs  fib_processor.rs  fic_handler.rs  mod.rs  prot_tables.rs  protection.rs  ringbuffer.rs  simulation.rs  viterbi_handler.rs
src/pipeline/ofdm/: block_demod.rs  equalizer.rs  fft_engine.rs  freq_interleaver.rs  mer.rs  mod.rs  nco.rs  ofdm_processor.rs  (+7 more)
src/support/: band_handler.rs  dab_params.rs  fft_wrapper.rs  mod.rs  mod_new.rs  percentile.rs  ringbuffer.rs  subchannel_pool.rs
tests/: all_tests.rs  e2e_eti_pipeline.rs  integration_tests.rs
tests/all_tests/: eti_port_tests.rs  eti_tests.rs  fic_tests.rs  freq_interleaver_tests.rs  normalization_tests.rs  percentile_tests.rs  phase_table_tests.rs  prot_tables_tests.rs  protection_tests.rs  rtlsdr_port_tests.rs  signalling_tests.rs  sync_pipeline_tests.rs  viterbi_tests.rs
