[package]
name = "dabctl"
version = "1.2.1"
edition = "2021"
authors = ["gregoire78"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
ctrlc = "3.4"
rustfft = "6.4"
num-complex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
encoding_rs = "0.8.35"
rtl-sdr-rs = { version = "0.3", optional = true }

[features]
# RTL-SDR backend selection (choose exactly one):
#   default: old-dab/rtlsdr (vendored, built from source via cmake)
#   rtl-sdr-osmocom: system librtlsdr-dev (osmocom fork) — cargo build --no-default-features --features rtl-sdr-osmocom
#   rtl-sdr-rs: pure-Rust crate — cargo build --no-default-features --features rtl-sdr-rs
default = ["rtl-sdr-old-dab"]
rtl-sdr-old-dab = []
rtl-sdr-osmocom = []
rtl-sdr-rs = ["dep:rtl-sdr-rs"]

# Enable the Fraunhofer fdk-aac decoder instead of the default faad2.
# Install libfdk-aac-dev and build with: cargo build --features fdk-aac
fdk-aac = []

[build-dependencies]
bindgen = "0.69"

[[bin]]
name = "dabctl"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
